[package]
name = "mblog"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = "0.72"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio","runtime-tokio-native-tls","sqlite" ] }
serde_yml = "0.0.12"
serde = { version = "1.0.215", features = ["derive"] }
