[package]
name = "mblog"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.72", features = ["jwt-auth", "anyhow", "catch-panic"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "runtime-tokio-native-tls", "mysql", "chrono"] }
serde_yml = "0.0.12"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
validator = { version = "0.19.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
futures-util = "0.3.31"
tantivy = "0.22.0"
tantivy-jieba = "0.11.0"
tokio-cron-scheduler = "0.13.0"